[package]
name = "example-module"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
serde = { workspace = true }

sov-bank = { workspace = true }
sov-modules-api = { workspace = true }
sov-state = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
example-module = { path = ".", version = "*", features = ["native"] }
sov-test-utils = { workspace = true }
strum = { workspace = true }

[features]
default = []
arbitrary = [
    "example-module/arbitrary",
    "sov-modules-api/arbitrary",
    "sov-state/arbitrary",
    "sov-test-utils/arbitrary",
]
native = [
    "example-module/native",
    "sov-bank/native",
    "sov-modules-api/native",
    "sov-state/native",
]
