[package]
name = "sov-cyferio-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { workspace = true, features = ["bytes"] }
sov-rollup-interface = { workspace = true }
bytes = { version = "1.2.1", features = ["serde"] }
primitive-types = { version = "0.12.2", features = ["serde"] }
sp-core-hashing = "16.0.0"
subxt = { version = "0.29", optional = true }
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.6.3", features = ["std"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"], optional = true }
derive_more = "0.99.17"
sha2 = "0.10.6"

# Convenience
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"], default-features = false, optional = true }
thiserror = { workspace = true }
sp-keyring = { version = "24", optional = true }
sp-core = { version = "21", optional = true }
hex = { workspace = true }

[[bin]]
name = "test"
path = "src/main.rs"

[features]
default = ["native"]
native = [
    "dep:avail-subxt",
    "dep:codec",
    "dep:futures",
    "dep:reqwest",
    "dep:sp-core",
    "dep:sp-keyring",
    "dep:subxt",
    "dep:tokio",
    "sov-rollup-interface/native",
]
