[package]
name = "sov-sui-da"
version = "0.3.0"
edition = "2021"
resolver = "2"

[dependencies]
sui_sdk = { workspace = true }
fastcrypto = { workspace = true }
sui-json-rpc-types = { workspace = true }
sui-types = { workspace = true }
shared-crypto = { workspace = true }


tokio = { version = "1.2", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
schemars = "0.8.21"
primitive-types = { version = "0.12.2", features = ["serde"] }
bytes = { version = "1.2.1", features = ["serde"] }
bcs = "0.1.4"
hex = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
tracing = { workspace = true }
derive_more = { workspace = true, features = ["from", "into"] }
futures = { version = "0.3", default-features = false }
sp-keyring = { version = "24", optional = true }
sp-core = { version = "21", optional = true }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
], default-features = false, optional = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
sov-rollup-interface = { workspace = true }
reqwest = { workspace = true, features = [
    "rustls-tls",
    "json",
], default-features = false, optional = true }
base58 = "0.2"

[[bin]]
name = "test"
path = "src/main.rs"

[features]
default = []
native = ["dep:sea-orm", "dep:reqwest", "sov-rollup-interface/native"]
postgres = ["native", "sea-orm/sqlx-postgres"]
