[package]
name = "sov-demo-prover-guest-celestia"
version = "0.3.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
anyhow = "1.0.86"

risc0-zkvm = { version = "1.1", default-features = false, features = ["std"] }
risc0-zkvm-platform = { version = "1.1" }

stf-starter = { path = "../../../stf" }

sov-rollup-interface = { git = "ssh://git@github.com/cyferio-labs/sovereign-sdk-wip.git", branch = "fix/update-cyferio-deps" }
sov-celestia-adapter = { git = "ssh://git@github.com/cyferio-labs/sovereign-sdk-wip.git", branch = "fix/update-cyferio-deps" }
sov-modules-api = { git = "ssh://git@github.com/cyferio-labs/sovereign-sdk-wip.git", branch = "fix/update-cyferio-deps" }
sov-modules-stf-blueprint = { git = "ssh://git@github.com/cyferio-labs/sovereign-sdk-wip.git", branch = "fix/update-cyferio-deps" }
sov-risc0-adapter = { git = "ssh://git@github.com/cyferio-labs/sovereign-sdk-wip.git", branch = "fix/update-cyferio-deps" }
sov-state = { git = "ssh://git@github.com/cyferio-labs/sovereign-sdk-wip.git", branch = "fix/update-cyferio-deps" }
sov-mock-zkvm = { git = "ssh://git@github.com/cyferio-labs/sovereign-sdk-wip.git", branch = "fix/update-cyferio-deps" }
sov-kernels = { git = "ssh://git@github.com/cyferio-labs/sovereign-sdk-wip.git", branch = "fix/update-cyferio-deps" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# Corresponding release: <https://github.com/risc0/curve25519-dalek/releases/tag/curve25519-4.1.2-risczero.0>
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", rev = "3dccc5b71b806f500e73829e2a5cbfe288cce2a0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = ["sov-celestia-adapter/bench", "sov-risc0-adapter/bench"]
bincode = ["sov-risc0-adapter/bincode"]